26-compromised-developer/challenge/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: d26-ssh-service
  labels:
    app: d26-compromised-developer
spec:
  type: ClusterIP
  selector:
    app: d26-compromised-developer
  ports:
    - name: ssh
      port: 22
      targetPort: 22
      protocol: TCP
